# moveV

./: CMakeLists.txt  Main.qml  README.md  SubtitleUtils.js  bluezmediaplayer.h  changeVolumeManually.cpp  main.cpp  mprisadaptor.cpp  mprisadaptor.h  mprisrootadaptor.cpp  mprisrootadaptor.h  subtitleextractor.cpp  subtitleextractor.h  subtitlefinder.cpp  subtitlefinder.h
Config/: Config.qml
CustomComponents/: CustomButton.qml  CustomButtonWithIcon.qml  CustomCheckBox.qml  CustomCollapsiblePanel.qml  CustomCombobox.qml  CustomComboboxWithIcon.qml  CustomPopupMenu.qml  CustomPopupMessage.qml  CustomProccessBar.qml  CustomSwitch.qml  CustomSwitchText.qml  CustomTextInput.qml  CustomTimer.qml  qmldir
MediaControls/: AudioControl.qml  CMakeLists.txt  ControlImages.qml  CustomCheckbox.qml  CustomSlider.qml  PlaybackControl.qml  PlaybackSeekControl.qml
MediaPlayer/: CMakeLists.txt  Main.qml  PlaylistInfo.qml  SettingsInfo.qml  SettingsPage.qml  SubtitleUtils.js  scripts.js  subtitlefinder.cpp  subtitlefinder.h
